<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".RecoveryPasswordFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recovery_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        android:textColor="@color/black"
        android:typeface = "monospace"
        >
    </TextView>
    <ProgressBar
        android:id="@+id/pb_loading"
        android:layout_width="50dp"
        android:layout_marginBottom="4dp"
        android:visibility="gone"
        android:layout_height="50dp">

    </ProgressBar>
    <EditText
        android:id="@+id/et_username"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginVertical="5dp"
        android:background="@drawable/rounded_edit_text_bg"
        android:padding="10dp"
        android:hint="@string/login_hint_et">

    </EditText>
    <EditText
        android:id="@+id/et_code_word"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginVertical="5dp"
        android:background="@drawable/rounded_edit_text_bg"
        android:padding="10dp"
        android:hint="@string/code_word_hint_et">


    </EditText>
    <EditText
android:id="@+id/et_new_password"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginVertical="5dp"
        android:background="@drawable/rounded_edit_text_bg"
        android:visibility="gone"
        android:padding="10dp"
        android:hint="Новый пароль">

    </EditText>
    <EditText
        android:id="@+id/et_repeat_new_password"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:visibility="gone"
        android:layout_marginVertical="5dp"
        android:background="@drawable/rounded_edit_text_bg"
        android:padding="10dp"
        android:hint="Повторите пароль">

    </EditText>
    <LinearLayout
        android:layout_marginVertical="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >


        <Button
            android:id="@+id/bt_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back">
        </Button>

        <Button
            android:id="@+id/bt_verify"
            android:layout_marginLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/check_user_data_button_text">
        </Button>

        <Button
            android:id="@+id/bt_change"
            android:layout_marginLeft="5dp"
            android:layout_width="wrap_content"
            android:visibility="gone"
            android:enabled="false"
            android:layout_height="wrap_content"
            android:text="Изменить">
        </Button>


    </LinearLayout>


</LinearLayout>